--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "jsonresume-theme-kendall",
+  "name": "jsonresume-theme-kendall-felipecrs",
   "version": "0.1.19",
   "description": "A JSON Resume theme built with bootstrap",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "semantic-release",
+    "cz": "git-cz"
   },
-  "author": "M. Adam Kendall",
+  "author": "M. Adam Kendall and Felipe Santos",
   "license": "MIT",
   "dependencies": {
     "gravatar": "^1.0.6",
     "lodash": "^2.4.1",
     "mustache": "^2.2.1"
   },
+  "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "commitizen": "^4.1.5",
+    "conventional-changelog-conventionalcommits": "^4.4.0",
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5",
+    "semantic-release": "^17.1.1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/linuxbozo/jsonresume-theme-kendall.git"
+    "url": "https://github.com/felipecrs/jsonresume-theme-kendall.git"
   },
   "keywords": [
     "json",
@@ -23,7 +36,17 @@
     "theme"
   ],
   "bugs": {
-    "url": "https://github.com/linuxbozo/jsonresume-theme-kendall/issues"
+    "url": "https://github.com/felipecrs/jsonresume-theme-kendall-felipecrs/issues"
   },
-  "homepage": "https://github.com/linuxbozo/jsonresume-theme-kendall"
+  "homepage": "https://github.com/felipecrs/jsonresume-theme-kendall-felipecrs",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
